:bug: bugfix(scrollbar): fix scrollbar zindex

--- a/src/scss/scrollbar.scss
+++ b/src/scss/scrollbar.scss
@@ -5,6 +5,7 @@
 html {
     ::-webkit-scrollbar {
       width: 0.5rem;
+      z-index: 1000000;
       
       /* Track */
       &-track {
